--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
   "id": "recursive-copy",
-  "name": "Recursive Copy",
+  "name": "Recursive Copy Backlinks",
   "version": "1.0.0",
   "minAppVersion": "0.15.0",
-  "description": "Recursively copies all markdown files in a folder, concatenates them, and copies them into the clipboard. Useful for quickly loading context into AI. Can be triggered by right clicking a folder and selecting the context menu item, or by binding a key (will copy everything in the active file's folder).",
-  "author": "datawitch",
-  "authorUrl": "https://github.com/StructByLightning",
+  "description": "Copies the content of a markdown file along with the content of all files that link to it (backlinks). The copied content is concatenated and placed in the clipboard. This is useful for quickly loading context into AI. Can be triggered by right-clicking a file and selecting the context menu item, or by using a command.",
+  "author": "Dylan Shade",
+  "authorUrl": "https://github.com/dpshade22",
   "fundingUrl": "",
   "isDesktopOnly": false
 }
