--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "obsidian-sample-plugin",
+  "name": "obsidian-recursive-copy",
   "version": "1.0.0",
-  "description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+  "description": "Recursively copies all markdown files in a folder, concatenates them, and copies them into the clipboard.",
   "main": "main.js",
   "scripts": {
     "dev": "node esbuild.config.mjs",
     "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
     "version": "node version-bump.mjs && git add manifest.json versions.json"
   },
-  "type": "module",
   "keywords": [],
   "author": "",
   "license": "MIT",
