--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "id": "recursive-copy",
-  "name": "Recursive Copy Backlinks",
+  "id": "recursive-context-copy",
+  "name": "Recursive Context Copy",
   "version": "1.0.0",
   "minAppVersion": "0.15.0",
   "description": "Copies the content of a markdown file along with the content of all files that link to it (backlinks). The copied content is concatenated and placed in the clipboard. This is useful for quickly loading context into AI. Can be triggered by right-clicking a file and selecting the context menu item, or by using a command.",
